--- a/Code/app/src/main/res/values/strings.xml
+++ b/Code/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">vuivc</string>
+    <string name="facebook_app_id">2260493494173421</string> <string name="fb_login_protocol_scheme">fb2260493494173421</string>
+    <string name="dangnhapfacebook">Đăng nhập bằng Facebook</string>
 </resources>
