--- a/Code/app/src/main/res/values-vi-rVN/strings.xml
+++ b/Code/app/src/main/res/values-vi-rVN/strings.xml
@@ -3,8 +3,8 @@
     <string name="app_name">vuivc</string>
     <string name="Txt_Google">Đăng Nhập bằng Google+</string>
     <string name="Txt_Facebook" translatable="false">Đăng Nhập Bằng Facebook</string>
-    <string name="Txt_Login">Đăng Nhập</string>
-    <string name="Txt_Register">Đăng Ký</string>
+    <string name="Txt_Login">Bạn đã có tài khoản? Sign in</string>
+    <string name="Txt_Register">Đăng ký với Email</string>
     <string name="Ed_UserName">Nhập Tài Khoản</string>
     <string name="Ed_Password">Nhập Password</string>
     <string name="Bt_Back">Quay Trở Về</string>
