--- a/Code/app/src/main/res/values-vi-rVN/strings.xml
+++ b/Code/app/src/main/res/values-vi-rVN/strings.xml
@@ -10,4 +10,14 @@
     <string name="Bt_Back">Quay Trở Về</string>
     <string name="Error">Sai Tài Khoản Hoặc Mật Khẩu</string>
     <string name="Thanhcong">Thành Công</string>
+    <string name="follow">Theo dõi +</string>
+    <string name="videos">VIDEOS</string>
+    <string name="followers">Người theo dõi</string>
+    <string name="following">Đang theo doi</string>
+    <string name="image_user">Ảnh_user</string>
+    <string name="image_leftarrow">mũi_tên_trái</string>
+    <string name="image_setting">cài đặt</string>
+    <string name="like">Đã thích</string>
+    <string name="Hoso">Hồ sơ</string>
+    <string name="Save">Lưu</string>
 </resources>
