--- a/Code/app/src/main/res/values/strings.xml
+++ b/Code/app/src/main/res/values/strings.xml
@@ -12,5 +12,16 @@
     <string name="Error">Invalid UserName of Password</string>
     <string name="Thanhcong">Login Thanh cong</string>
     <string name="Error_Register">Tài Khoản Tồn Tại</string>
+    <string name="follow">Follow +</string>
+    <string name="videos">VIDEOS</string>
+    <string name="followers">FOLLOWERS</string>
+    <string name="following">FOLLOWING</string>
+    <string name="image_user">image_user</string>
+    <string name="image_leftarrow">left_arrow</string>
+    <string name="image_setting">setting</string>
+    <string name="like">Liked</string>
+    <string name="Hoso">Hồ sơ</string>
+    <string name="Save">Save</string>
+
 
 </resources>
