--- a/Code/app/src/main/res/values/strings.xml
+++ b/Code/app/src/main/res/values/strings.xml
@@ -21,7 +21,18 @@
     <string name="image_setting">setting</string>
     <string name="like">Liked</string>
     <string name="Hoso">Hồ sơ</string>
-    <string name="Save">Save</string>
+    <string name="Save">Lưu</string>
+    <string name="ChangeImage">Thay đổi ảnh</string>
+    <string name="editprofile">Sửa đổi hồ sơ</string>
+    <string name="about">Giới thiệu</string>
+    <string name="logout">Đăng xuất</string>
+    <string name="YourVideo">Video của bạn</string>
+    <string name="Followers">Danh sách người theo dõi bạn</string>
+    <string name="Followings">Danh sách người bạn theo dõi</string>
+    <string name="Male">Nam</string>
+    <string name="Female">Nữ</string>
+    <string name="CameraShot">Chụp ảnh</string>
+    <string name="GetImageLocal">Lấy ảnh từ điện thoại</string>
 
 
 </resources>
