--- a/Code/app/src/main/res/values-vi-rVN/strings.xml
+++ b/Code/app/src/main/res/values-vi-rVN/strings.xml
@@ -35,4 +35,15 @@
     <string name="tab_trend">Xu hướng</string>
     <string name="tab_videos">Video</string>
     <string name="tab_photos">Ảnh</string>
+    <string name="Error_Register">"Tài Khoản Tồn "</string>
+    <string name="Sign_in">Đăng nhập</string>
+    <string name="Sign_up">Đăng ký</string>
+    <string name="Title">Bạn cần một tài khoản Vuivc để tiếp tục</string>
+    <string name="yeuthich">Yêu Thích</string>
+    <string name="video">Video</string>
+    <string name="loadimg">Tải ảnh</string>
+    <string name="hinhanh">Hình Ảnh</string>
+    <string name="hint">Nhập thông tin</string>
+    <string name="hashtag">Hashtag</string>
+    <string name="pickavuivc">Chọn tài khoản VUIVC</string>
 </resources>
