--- a/Code/app/src/main/res/values/strings.xml
+++ b/Code/app/src/main/res/values/strings.xml
@@ -58,4 +58,6 @@
     <string name="phan_dinh_tung">Phan Dinh Tung</string>
     <string name="todo">TODO</string>
     <string name="h_y_b" translatable="false">Hủy bỏ</string>
+    <string name="loadimgsever">LOAD IMAGE SEVER</string>
+    <string name="loadimgphone">LOAD IMAGE IN PHONE</string>
 </resources>
