đã fix xong profile user
Chưa có server để lưu

--- a/Code/app/src/main/res/values-vi-rVN/strings.xml
+++ b/Code/app/src/main/res/values-vi-rVN/strings.xml
@@ -13,7 +13,7 @@
     <string name="follow">Theo dõi +</string>
     <string name="videos">VIDEOS</string>
     <string name="followers">Người theo dõi</string>
-    <string name="following">Đang theo doi</string>
+    <string name="following">Đang theo dõi</string>
     <string name="image_user">Ảnh_user</string>
     <string name="image_leftarrow">mũi_tên_trái</string>
     <string name="image_setting">cài đặt</string>
@@ -21,12 +21,10 @@
     <string name="Hoso">Hồ sơ</string>
     <string name="Save">Lưu</string>
     <string name="ChangeImage">Thay đổi ảnh</string>
-    <string name="editprofile">Edit your profile</string>
-    <string name="about">About</string>
+    <string name="editprofile">Tinh chỉnh cá nhân</string>
+    <string name="about">Thông tin phiên bản</string>
     <string name="logout">Đăng xuất</string>
     <string name="YourVideo">Video của bạn</string>
-    <string name="Followers">Danh sách người theo dõi bạn</string>
-    <string name="Followings">Danh sách người bạn theo dõi</string>
     <string name="Male">Nam</string>
     <string name="Female">Nữ</string>
     <string name="CameraShot">Chụp ảnh</string>
